tests/js_error/source_locations/expression/yield_star/get_async_iterator_throws_module.js
var iterable = {
  [Symbol.iterator]() {
    throw new Error();
  }
}

async function *generator() {
  yield* iterable;
}

let iter = generator();
await iter.next();